--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,14 @@ dependencies {
     compile files('libs/volley.jar')
     compile files('libs/okhttp-urlconnection-2.7.5.jar')
     compile files('libs/jackson-core-asl-1.9.11.jar')
+    compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
 }
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
-    defaultConfig{
+    defaultConfig {
         applicationId "cn.ucai.fulicenter"
     }
     sourceSets {
