--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,7 +40,7 @@
     <uses-permission android:name="cn.ucai.superwechat.permission.C2D_MESSAGE" />
 
     <application
-        android:name=".SuperWeChatApplication"
+        android:name=".FuliCenterApplication"
         android:allowBackup="true"
         android:icon="@drawable/logo_uidemo"
         android:label="@string/app_name">
