--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile files('libs/jackson-core-asl-1.9.11.jar')
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:support-v4:23.3.0'
+    compile files('libs/disklrucache-2.0.2.jar')
 }
 
 android {
