1、修复精选不能下载数据。2、精选二级页面完成。

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -74,6 +74,12 @@
             android:theme="@style/horizontal_slide">
 
         </activity>
+        <!-- 精品二级页面 -->
+        <activity android:name=".activity.BoutiqueDetailsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/horizontal_slide">
+
+        </activity>
         <!-- 登陆 -->
         <activity
             android:name=".activity.LoginActivity"
