1、完成个人中心页面。2、点击个人中心页面判断是否登录。3、判断是否第一次登录。4、设置页面完成。5、退出登录返回时，返回新品页面。6、登录成功后下载收藏宝贝数量。7、闪屏界面下载收藏宝贝数量.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -167,7 +167,7 @@
             android:theme="@style/nornal_style" />
         <!-- 视频通话 -->
         <activity
-            android:name=".activity.VideoCallActivity"
+            android:name=".activity.SettingsActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
