收藏宝贝界面activity、adapter（未能显示数据）

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -84,6 +84,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide">
         </activity>
+        <!-- 收藏页面 -->
+        <activity android:name=".activity.CollectActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/horizontal_slide">
+        </activity>
         <!-- 登陆 -->
         <activity
             android:name=".activity.LoginActivity"
