--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,8 +39,8 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <!-- 蓝牙分享所需的权限 -->
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
@@ -62,12 +62,12 @@
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".activity.fuliCenterMainActivity"
+        <activity
+            android:name=".activity.fuliCenterMainActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
-            android:windowSoftInputMode="adjustPan"
-            />
+            android:windowSoftInputMode="adjustPan" />
 
         <!-- 开屏页 -->
         <activity
@@ -81,26 +81,25 @@
             </intent-filter>
         </activity>
         <!-- 商品详情 -->
-        <activity android:name=".activity.GoodDetailActivity"
+        <activity
+            android:name=".activity.GoodDetailActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/horizontal_slide">
-
-        </activity>
+            android:theme="@style/horizontal_slide"></activity>
         <!-- 精品二级页面 -->
-        <activity android:name=".activity.BoutiqueDetailsActivity"
+        <activity
+            android:name=".activity.BoutiqueDetailsActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/horizontal_slide">
-        </activity>
+            android:theme="@style/horizontal_slide"></activity>
         <!-- 分类二级页面 -->
-        <activity android:name=".activity.CategoryChildActivity"
+        <activity
+            android:name=".activity.CategoryChildActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/horizontal_slide">
-        </activity>
+            android:theme="@style/horizontal_slide"></activity>
         <!-- 收藏页面 -->
-        <activity android:name=".activity.CollectActivity"
+        <activity
+            android:name=".activity.CollectActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/horizontal_slide">
-        </activity>
+            android:theme="@style/horizontal_slide"></activity>
         <!-- 登陆 -->
         <activity
             android:name=".activity.LoginActivity"
@@ -300,16 +299,18 @@
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="3ecea51f560650b1ed8a4b99808f52e8" />
+
         <activity
             android:name="com.mob.tools.MobUIShell"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustResize" >
-
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
                 <data android:scheme="tencent100371282" />
+
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
@@ -317,19 +318,18 @@
             <!-- 调用新浪原生SDK，需要注册的回调activity -->
             <intent-filter>
                 <action android:name="com.sina.weibo.sdk.action.ACTION_SDK_REQ_ACTIVITY" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <!--微信分享回调 -->
+        <!-- 微信分享回调 -->
         <activity
             android:name=".wxapi.WXEntryActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true"
-            android:screenOrientation="portrait" />
-
-
-
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity android:name=".activity.BuyActivity"></activity>
     </application>
 
 </manifest>
